--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/ly16">Github·ly16</a>.</p>
     
-    <p>Currently, I am a M.S student in USA.</p>
+    <p>Currently, I am a M.S. student in USA.</p>
 
     <h5>Talks</h5>
 
