--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Genius only means hard-working all one's life.<br>
     Bad times make a good man.</p></blockquote>
 
-    <p>Hi, I am <strong>Lilly Yu</strong>，you can call me <strong>Clover</strong>. I wanna be a SDE from a statistical student.</p>
+    <p>Hi, I am <strong>Lilly Yu</strong>，you can call me <strong>Clover</strong>. I wanna be a SDE from the data field.</p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/ly16">Github·ly16</a>.</p>
     
