--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒，<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>Clover</strong>，半路出家想当程序媛，遥遥无期的美飘。</p>
+    <p>Hey，我是<strong>Clover</strong>，半路出家想当程序媛, 数据转码途中。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的个人博客。</a>。</p>
 
-    <p>目前还在美国读统计硕士。</p>
+    <p>目前在美国读统计学硕士。</p>
 
     <p></p>
     
