--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: keep hungry keep foolish
-header-img: "img/home-bg-map.jpg"
+header-img: "img/tag-bg-o.jpg"
 ---
 
 <!-- Page Header -->
