--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "网络似乎出现了问题 😥"
+description: "Your web connection got a problem 😥"
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
