--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 layout: page
 title: "About"
 description: "Hey, this is Clover."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/home-bg.jpg"
 ---
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
+    <option value="1" selected> 中文 Chinese </option>
+    <option value="0"> 英文 English </option>
 </select>
 
 <!-- Chinese Version -->
