--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "From biotechnology, through data, to computer science."
 ---
 
 {% for post in paginator.posts %}
