--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ header-img: "img/home-bg.jpg"
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="1" selected> 中文 Chinese </option>
-    <option value="0"> 英文 English </option>
+    <option value="1" > 中文 Chinese </option>
+    <option value="0" selected> 英文 English </option>
 </select>
 
 <!-- Chinese Version -->
@@ -20,9 +20,9 @@ header-img: "img/home-bg.jpg"
 
     <p>Hey，我是<strong>Clover</strong>，半路出家想当程序媛, 数据转码途中。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的个人博客。</a>。</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com/">Jekyll</a> 搭建的个人博客。</a>。</p>
 
-    <p>目前在美国读统计学硕士。</p>
+    <p>目前, 在美国读统计学硕士。</p>
 
     <p></p>
     
