--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ header-img: "img/home-bg.jpg"
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="1" > 中文 Chinese </option>
-    <option value="0" selected> 英文 English </option>
+    <option value="0" selected> 中文 Chinese </option>
+    <option value="1" > 英文 English </option>
 </select>
 
 <!-- Chinese Version -->
