--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "From biotechnology, through data, to computer science."
+description: "Love Piano, Love Roller Coaster"
 ---
 
 {% for post in paginator.posts %}
