--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@ header-img: "img/home-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒，<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>小小的天 有大大的梦想，<br>
+   重重的壳裹着轻轻的仰望</p></blockquote>
 
     <p>Hey，我是<strong>Clover</strong>，半路出家想当程序媛, 数据转码途中。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com/">Jekyll</a> 搭建的个人博客。</a>。</p>
 
-    <p>目前, 在美国读统计学硕士。</p>
+    <p>美国南加州大学计算机硕士 2018~2020</p>
 
     <p></p>
     
@@ -37,14 +37,14 @@ header-img: "img/home-bg.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-    <blockquote><p>Genius only means hard-working all one's life.<br>
-    Bad times make a good man.</p></blockquote>
+    <blockquote><p>All through the night time <br>
+    I'll keep it until the sun goes on </p><blockquote>
 
-    <p>Hi, I am <strong>Lilly Yu</strong>，you can call me <strong>Clover</strong>. I wanna be a software engineer from the data field.</p>
+    <p>Hi, I am <strong>Lili Yu</strong>，you can call me <strong>Clover</strong>. I wanna be a software engineer from the data field.</p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/ly16">Github·ly16</a>.</p>
     
-    <p>Currently, I am a M.S. student in USA.</p>
+    <p>Grad Student in Computer Science at USC 2018~2020 </p>
 
     <h5>Talks</h5>
 
