--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/home-bg.jpg"
 
     <p>Hey，我是<strong>Clover</strong>，半路出家想当程序媛, 数据转码途中。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com/">Jekyll</a> 搭建的个人博客。</a>。</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com/">Jekyll</a> 搭建的个人博客。</a></p>
 
     <p>美国南加州大学计算机硕士 2018~2020</p>
 
@@ -44,7 +44,7 @@ header-img: "img/home-bg.jpg"
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/ly16">Github·ly16</a>.</p>
     
-    <p>Grad Student in Computer Science at USC 2018~2020 </p>
+    <p>MS Student in Computer Science at USC 2018~2020 </p>
 
     <h5>Talks</h5>
 
